@@ -1,4 +1,6 @@
 1.9.0
+   - bug [12993] "lucene-directory kan fjernes fra OpenSearch"
+   - bug [12997] "tools-directory kan fjernes"
    - bug [12989] "compass-directory skal fjernes"
    - bug [12996] "PTI-directoriet kan fjernes"
    - bug [12995] "PTI-specifikke plugins kan fjernes."
